--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
         <img class="photo" src="img/headshot.jpg" alt="Photo of Mica" width="250px">
         <div class="title">About Mica</div>
         <!-- <div class="vr"></div> -->
-        <p class="para">Before becoming a web developer, I was a music professional for 12 years. The industry not only brought me a lot of joy and meaning, but it also taught me invaluable skills: discipline, flexibility, structure, long-term goal-setting, patience, team-work, business knowledge, and a lot of creativity. I thrived off of the ability to create something from nothing, as well as being a part of a greater community that’s constantly progressing and changing.
+        <p class="para">Before becoming a web developer, I was a music professional for 12 years. The industry not only brought me a lot of joy and meaning, but it also taught me invaluable skills: discipline, flexibility, structure, long-term goal-setting, patience, team-work, business knowledge, and an acceptance for challenge. Without a doubt, having these skills under my belt prepared me to become a self-taught developer.
         <br><br>
-         I find many similarities between music and web development, both in the developmental process and final execution. A coding exercise versus an etude, a new framework versus a new technique, a launch date versus a performance. Not to mention the human emotion behind it all. They're both meaningful, engaging, and challenging roles, and in tandem with my existing skills, it made my cross over less abstract.
+         I treat coding exercises like they are practice etudes. I approach learning a new framework like it is a new technique. Even the build up to a launch date gives me familiar emotions of excitement (and pressure) as an opening night. I thrive off of creating something from nothing, and being a part of a community that’s constantly progressing and changing.
         </p>
       </div>
       <hr class="hr">
