SCSS Changes: Variables, mixins

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       </div>
         <div class="banner">
           <div class="container-banner">
-            <div class="title">Mica S. Phan</div><br>
+            <div class="myname">Mica S. Phan</div><br>
             <div class="line"></div>
-            <div class="rest">
+            <div class="roles">
               Front-End Developer<br>
               UX Designer
             </div>
