--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <img class="photo" src="img/headshot.jpg" alt="Photo of Mica" width="250px">
         <div class="title">About Mica</div>
         <!-- <div class="vr"></div> -->
-        <p class="para">Before becoming a web developer, I was a music professional for 12 years. The industry not only brought me a lot of joy and meaning, but it also taught me invaluable skills: discipline, flexibility, structure, long-term goal-setting, patience, team-work, business knowledge, and an acceptance for challenge. Without a doubt, having these skills under my belt prepared me to become a self-taught developer.
+        <p class="para">Before becoming a web developer, I was a music professional for 12 years. The industry not only brought me a lot of joy and meaning, but it also taught me invaluable skills: discipline, flexibility, structure, long-term goal-setting, communication, business knowledge, patience, and an appreciation for challenge. Having these skills under my belt prepared me to become a self-taught developer.
         <br><br>
          I treat coding exercises like they are practice etudes. I approach learning a new framework like it is a new technique. Even the build up to a launch date gives me familiar emotions of excitement (and pressure) as an opening night. I thrive off of creating something from nothing, and being a part of a community that’s constantly progressing and changing.
         </p>
@@ -104,10 +104,10 @@
         <!-- <div class="vr"></div> -->
         <div class="qa-col">
           <p><span class="query">What resources did you use to learn?"</span><br>
-            I am self-taught. I took the Front-End Web Development Track at <a href="https://teamtreehouse.com/micaphan" class="hotlink" target="_blank" rel="noopener">Team Treehouse</a>, used additional online resources, and reinforced my practice with top-rated UX and coding books. Thanks to 22 years of studying music, I was familiar with creating practice plans, following appropriately leveled study books, and respecting the journey rather than solely focusing on the end goal.
+            I took the Front-End Web Development Track at <a href="https://teamtreehouse.com/micaphan" class="hotlink" target="_blank" rel="noopener">Team Treehouse</a>, used additional online resources, and reinforced my practice with top-rated UX and coding books. Thanks to 22 years of studying music, I was familiar with creating practice plans, following appropriately leveled study books, and respecting the journey rather than focusing on the end goal.
           </p>
           <p><span class="query">"What is unique about you?"</span><br>
-            I love to help people! I’ve worked with 5-year-old violinists, large parent-volunteer groups, working professionals thriving in their industry, and many more. My truest purpose is to produce excellent and meaningful work that will help others reach their goal.
+            I love to help people! I’ve worked with 5-year-old violinists, large parent-volunteer groups, working professionals thriving in their industry, and many others. My truest purpose is to produce excellent and meaningful work that will help others reach their goal.
           </p>
           <p><span class="query">"What kind of skills do you have that will be useful?"</span><br>
             I'm a self-starter. My values in education and self-development characterize me as someone who will always be keen to learn new techniques, tools, and software. I have a demonstrated ability to listen and communicate well in collaborative environments. I've been challenged enough to prove that my problem-solving skills create effective and impactful solutions that solve the small issues and feed the big picture.
