--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
         <div class="title">Q&A</div>
         <div class="qa-col">
           <p><span class="query">What resources did you use to learn?"</span><br>
-            I took the Front-End Web Development Track at <a href="https://teamtreehouse.com/micaphan" class="hotlink" target="_blank" rel="noopener">Team Treehouse</a>, used additional online resources, and reinforced my practice with top-rated UX and coding books. Thanks to 22 years of studying music, I was familiar with creating practice plans, following appropriately leveled study books, and respecting the (continuing) journey rather than focusing on an end goal.
+            I took the Front-End Web Development Track at <a href="https://teamtreehouse.com/micaphan" class="hotlink" target="_blank" rel="noopener">Team Treehouse</a>. I utilized additional online resources and reinforced my practice with top-rated UX and coding books. Thanks to 22 years of studying music, I was familiar with creating practice plans, following appropriately leveled study books, and respecting the (continuing) journey rather than focusing on an end goal.
           </p>
           <p><span class="query">"What is unique about you?"</span><br>
             I've worked in many different types of businesses and organizations - retail, food service, administration, non-profit, education, live production, event coordination, and more. My experience and insight could be a great asset for an agency looking to really understand and connect with their clients.
