--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="halfbox">
               <div class="subtitle">AL LISI PHOTOGRAPHY</div>
               <p class="category">Vanilla Javascript</p>
-              <p class=description>A landscape photographer's digital portfolio utilizing Vanilla Javascript.</p>
+              <p class=description>A landscape photographer's digital portfolio featuring Vanilla Javascript.</p>
               <span class="span"></span>
             </div>
             <div class="btns">
