--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         <!-- <div class="vr"></div> -->
         <p class="para">Before becoming a web developer, I was a music professional for 12 years. The industry not only brought me a lot of joy and meaning, but it also taught me invaluable skills: discipline, flexibility, structure, long-term goal-setting, communication, business knowledge, patience, and an appreciation for challenge. Having these skills under my belt prepared me to become a self-taught developer.
         <br><br>
-         I thrive off of creating something from nothing, and being a part of a community that’s constantly progressing and changing. My truest purpose is to produce excellent and meaningful work that will help others reach their goal.
+         Learning new things helps me feel young. I thrive off of creating something from nothing, and being a part of a community that’s constantly progressing and changing. My truest purpose is to produce excellent and meaningful work that will help others reach their goal.
         </p>
       </div>
       <hr class="hr">
@@ -103,13 +103,13 @@
         <div class="title">Q&A</div>
         <div class="qa-col">
           <p><span class="query">What resources did you use to learn?"</span><br>
-            I took the Front-End Web Development Track at <a href="https://teamtreehouse.com/micaphan" class="hotlink" target="_blank" rel="noopener">Team Treehouse</a>. I utilized additional online resources and reinforced my practice with top-rated UX and coding books. Thanks to 22 years of studying music, I was familiar with creating practice plans, following appropriately leveled study books, and respecting the (continuing) journey rather than focusing on an end goal.
+            I took the Front-End Web Development Track at <a href="https://teamtreehouse.com/micaphan" class="hotlink" target="_blank" rel="noopener">Team Treehouse</a>, used additional online resources and reinforced my practice with top-rated UX and coding books. Thanks to 22 years of studying music, I was familiar with creating practice plans, following appropriately leveled study books, and respecting the (continuing) journey rather than focusing on an end goal.
           </p>
           <p><span class="query">"What is unique about you?"</span><br>
-            I've worked in many different types of businesses and organizations - retail, food service, administration, non-profit, education, live production, event coordination, and more. My experience and insight could be a great asset for an agency looking to really understand and connect with their clients.
+            I'm a self-starter. I've excelled in many different types of businesses and organizations - retail, food service, administration, non-profit, education, live production, event coordination, and more. My experience and insight could be a great asset for an agency looking to really understand and connect with their clients.
           </p>
           <p><span class="query">"What kind of skills do you have that will be useful?"</span><br>
-            I'm a self-starter. My values in education and self-development characterize me as someone who will always be keen to learn new techniques, tools, and software. I have a demonstrated ability to listen and communicate well in collaborative environments. I've been challenged enough to develop creative problem-solving skills that solve the small issues and feed the big picture.
+            My values in education and self-development characterize me as someone who will always be keen to learn new techniques, tools, and software. I have a demonstrated ability to listen and communicate well in collaborative environments. I've been challenged enough to develop creative problem-solving skills that solve the small issues and feed the big picture.
           </p>
           <p><span class="query">"What do you lack in terms of skill or knowledge?"</span><br>
             Though I have an eye for design and a flair for art and creativity, I have no formal education in visual or graphic design. However, I am building my skills by studying and copying UI frames and websites either as UX prototypes or mock coding projects.
