--- a/encyclopedia/case-encyc.html
+++ b/encyclopedia/case-encyc.html
@@ -218,7 +218,7 @@
 
 
 
-        <div class="article"><a href="https://xd.adobe.com/view/3d4a4c74-5e1f-48d0-8a60-e096acd21113-6819/?fullscreen" target="_blank"><b>Click here to view the full prototype.</b></a></div>
+        <div class="article"><a class="hotlink" href="https://xd.adobe.com/view/3d4a4c74-5e1f-48d0-8a60-e096acd21113-6819/?fullscreen" target="_blank"><b>Click here to view the full prototype.</b></a></div>
         <br><br>
 
     <span class="span"></span>
