--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="Mica Phan" content="Portfolio of front-end and UX work by Mica Phan">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Mica Phan - UX Designer &amp; Front-end Developer Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="img/website-prev.jpg" />
+    <meta property="og:url" content="https://www.micaphan.com" />
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,400&family=Jost:wght@300;400&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
