--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Mica Phan - UX Designer &amp; Front-end Developer Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="img/website-prev.jpg" />
+    <meta property="og:image" content="https://github.com/mcaphn/portfolio/blob/main/img/website-prev.jpg?raw=true" />
     <meta property="og:url" content="https://www.micaphan.com" />
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
