--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div id="navbar">
-        <div class="logo">MICA PHAN</div>
+        <div class="logo"><a href="index.html">MICA PHAN</a></div>
           <ul class="nav-links">
             <li><a href="index.html#work" class="link">Work</a></li>
             <li><a class="about-link link" href="about.html">About</a></li>
