--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="index.html#work">Work</a>
               </li>
               <li>
-                <a href="contact.html">Contact</a>
+                <a href="img/mphan-resume.pdf">Resume</a>
               </li>
             </ul>
           </aside>
