--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <ul class="nav-links">
             <li><a href="#work" class="link">Work</a></li>
             <li><a class="about-link link" href="about.html">About</a></li>
-            <li><a class="link" href="contact.html">Contact</a></li>
+            <li><a class="link" href="img/mphan-resume.pdf">Resume</a></li>
           </ul>
           <button class="toggle">
             <svg viewBox="-20 0 120 50" width="40" height="45">
