--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
           <ul class="nav-links">
             <li><a href="index.html#work" class="link">Work</a></li>
             <li><a class="about-link link" href="#">About</a></li>
-            <li><a class="link" href="contact.html">Contact</a></li>
+            <li><a class="link" href="img/mphan-resume.pdf">Resume</a></li>
           </ul>
           <button class="toggle">
             <svg viewBox="-20 0 120 50" width="40" height="45">
@@ -40,7 +40,7 @@
                 <a href="index.html#work">Work</a>
               </li>
               <li>
-                <a href="contact.html">Contact</a>
+                <a href="img/mphan-resume.pdf">Resume</a>
               </li>
             </ul>
           </aside>
