--- a/terra/terra.html
+++ b/terra/terra.html
@@ -17,7 +17,7 @@
     <ul class="nav-links">
       <li><a class="link" href="../index.html#work">Work</a></li>
       <li><a class="link about" href="../about.html">About</a></li>
-      <li><a class="link" href="#">Contact</a></li>
+      <li><a class="link" href="img/mphan-resume.pdf">Resume</a></li>
     </ul>
     <button class="toggle">
       <svg viewBox="-20 0 120 50" width="40" height="45">
@@ -39,7 +39,7 @@
           <a href="../index.html#work">Work</a>
         </li>
         <li>
-          <a href="../contact.html">Contact</a>
+          <a href="img/mphan-resume.pdf">Resume</a>
         </li>
       </ul>
     </aside>
