resume link fixed

--- a/encyclopedia/case-encyc.html
+++ b/encyclopedia/case-encyc.html
@@ -16,7 +16,7 @@
       <ul class="nav-links">
         <li><a class="link" href="../index.html#work">Work</a></li>
         <li><a class="link about-link" href="../about.html">About</a></li>
-        <li><a class="link" href="img/mphan-resume.pdf">Resume</a></li>
+        <li><a class="link" href="../img/mphan-resume.pdf">Resume</a></li>
       </ul>
       <button class="toggle">
         <svg viewBox="-20 0 120 50" width="40" height="45">
@@ -38,7 +38,7 @@
             <a href="../index.html#work">Work</a>
           </li>
           <li>
-            <a href="img/mphan-resume.pdf">Resume</a>
+            <a href="../img/mphan-resume.pdf">Resume</a>
           </li>
         </ul>
       </aside>
