--- a/about.html
+++ b/about.html
@@ -2,8 +2,17 @@
 <html lang="en">
 
   <head>
+    <meta name="Mica Phan" content="Portfolio of front-end and UX work by Mica Phan">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Mica Phan - UX Designer &amp; Front-end Developer Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://github.com/mcaphn/portfolio/blob/main/img/website-prev.jpg?raw=true" />
+    <meta property="og:url" content="https://www.micaphan.com" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/aboutstyle.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500&family=Jost:wght@300;400&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
