--- a/terra/terra.html
+++ b/terra/terra.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="Mica Phan" content="Portfolio of front-end and UX work by Mica Phan">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Mica Phan - UX Designer &amp; Front-end Developer Portfolio" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://github.com/mcaphn/portfolio/blob/main/img/website-prev.jpg?raw=true" />
+  <meta property="og:url" content="https://www.micaphan.com" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <meta name="description" content="A UX Report on Terra Cafe's Website Redesign by Mica Phan">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="../css/terra.css" rel="stylesheet">
