--- a/terra/terra.html
+++ b/terra/terra.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="Mica Phan" content="Portfolio of front-end and UX work by Mica Phan">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Mica Phan - UX Designer &amp; Front-end Developer Portfolio" />
@@ -9,9 +8,9 @@
   <meta property="og:image" content="https://github.com/mcaphn/portfolio/blob/main/img/website-prev.jpg?raw=true" />
   <meta property="og:url" content="https://www.micaphan.com" />
   <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <meta name="description" content="A UX Report on Terra Cafe's Website Redesign by Mica Phan">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="../css/terra.css" rel="stylesheet">
@@ -78,7 +77,9 @@
   <div class="main">
     <span class="spacer"></span>
     <div class="subtitle">Observation</div>
-     Due to its small indoor space, Terra had to restrict its customers from entering the cafe. Orders could only be placed over the phone. A menu was available on Terra’s website, but walk-up customers had difficulty reading the PDF menu on their mobile phones. Due to its layout, customers would zoom in and swipe around to read item descriptions, but the text was too pixelated to read legibly (see image below). A QR code was eventually posted outside the building that was a direct link to a downloadable PDF of the menu with a higher resolution. Many utilized the QR code. Some resorted to knocking on the door to ask for a physical menu. Few tried to peek through the window to read the inside menu on the back wall. Others only ordered off the "Specials" chalkboard nailed to the building's exterior wall.
+     Due to its small indoor space, Terra had to restrict its customers from entering the cafe. Orders could only be placed over the phone. A menu was available on Terra’s website, but walk-up customers had difficulty reading the PDF menu on their mobile phones. Because of its layout, customers would zoom in and swipe around to read item descriptions, but the text was too pixelated to read legibly (see image below).
+     <br><br>
+     A QR code was eventually posted outside the building that was a direct link to a downloadable PDF of the menu with a higher resolution. Many utilized the QR code. Some resorted to knocking on the door to ask for a physical menu. Few tried to peek through the window to read the inside menu on the back wall. Others only ordered off the "Specials" chalkboard nailed to the building's exterior wall.
     <span class="spacer"></span>
     <div class="old-image-div"><img class="old-image" src="img/oldmenu.png" alt="Mobile view of the old menu"  width="100%" height="100%"><figcaption>Pretty design, but zoom in and it's barely legible.</figcaption></div>
     <span class="spacer"></span>
