index layout changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="manifest" href="/site.webmanifest">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,400&family=Jost:wght@300;400&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500&family=Jost:wght@300;400&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
 
     <title>Mica Phan Portfolio Site</title>
   </head>
@@ -56,12 +56,9 @@
       </div>
         <div class="banner">
           <div class="container-banner">
+          <div class="location">Connecticut, USA</div>
             <div class="myname">Mica S. Phan</div><br>
-            <div class="line"></div>
-            <div class="roles">
-              Front-End Developer<br>
-              UX Designer
-            </div>
+            <div class="roles">Front-End / UX</div>
           </div>
         </div>
       </header>
